--- a/dot_bash_profile.tmpl
+++ b/dot_bash_profile.tmpl
@@ -18,6 +18,11 @@ export PATH="/opt/local/bin:/opt/local/sbin:$PATH"
 export MANPATH="/opt/local/share/man:$MANPATH"
 # Finished adapting your MANPATH environment variable for use with MacPorts.
 
+# Setting PATH for Python 2.7
+# The orginal version is saved in .bash_profile.pysave
+PATH="/Library/Frameworks/Python.framework/Versions/2.7/bin:${PATH}"
+export PATH
+
 {{ else if eq .chezmoi.os "linux" -}}
 
 {{ end }}
