--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,4 +1,5 @@
-# specifies relevant attributes based on current setup
+# specifies a global profile
+# .chezmoitemplates contains template "headerfiles" that can be used by other templates wherever
 
 [data]
 
@@ -13,13 +14,4 @@ profile = "tesla_mac_sonoma"
 profile = "personal_ubuntu"
 {{ else }}
 # unsupported OS
-{{ end }}
-
-# ===================================
-# 	set search directories
-# ===================================
-# note that chezmoi uses its own templating engine that is like that of go but not identical
-{{ if eq .profile "tesla_mac_sonoma"}}
-{{ else if eq .profile "personal_ubuntu"}}
-searchdir = "/"
 {{ end }}
