Revert "move some stuff out to .chezmoitempalets"
This reverts commit c21c2754f8f68e36d138c15fa46d031c47994393.

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,5 +1,4 @@
-# specifies a global profile
-# .chezmoitemplates contains template "headerfiles" that can be used by other templates wherever
+# specifies relevant attributes based on current setup
 
 [data]
 
@@ -14,4 +13,13 @@ profile = "tesla_mac_sonoma"
 profile = "personal_ubuntu"
 {{ else }}
 # unsupported OS
+{{ end }}
+
+# ===================================
+# 	set search directories
+# ===================================
+# note that chezmoi uses its own templating engine that is like that of go but not identical
+{{ if eq .profile "tesla_mac_sonoma"}}
+{{ else if eq .profile "personal_ubuntu"}}
+searchdir = "/"
 {{ end }}
